--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  material_floating_search_bar: ^0.3.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,6 +51,7 @@ flutter:
     - assets/images/Smain.png
     - assets/images/cat.png
     - assets/images/HomeBG.png
+    - assets/
     
     
   # To add assets to your application, add an assets section, like this:
