--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/images/Smain.png
     - assets/images/cat.png
     - assets/images/HomeBG.png
+    - assets/images/pet.png
     - assets/
     
     
