--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   material_floating_search_bar: ^0.3.4
   flutter_rating_bar: ^4.0.0
+  flutter_card_swipper: ^0.4.0
 
 
 
@@ -55,6 +56,7 @@ flutter:
     - assets/images/cat.png
     - assets/images/HomeBG.png
     - assets/images/pet.png
+
     - assets/
     
     
