--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  material_floating_search_bar: ^0.3.4
+  flutter_rating_bar: ^4.0.0
+  flutter_card_swipper: ^0.4.0
+
+  http: ^0.13.3
+  provider: ^5.0.0
+  path_provider: ^2.0.2
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  material_floating_search_bar: ^0.3.4
-  flutter_rating_bar: ^4.0.0
-  flutter_card_swipper: ^0.4.0
+
 
 
 
